--- a/_layouts/org.html
+++ b/_layouts/org.html
@@ -2,15 +2,15 @@
 layout: default
 ---
 
-{% assign scheme_filename = page.url | replace: '.html','.scheme' | remove: '/org/' %}
-{% assign scheme_url = scheme_filename | prepend: '/' | prepend: site.baseurl %}
+{% assign scheme_url = page.url | replace: '.html','.src.txt' %}
+{% assign scheme_filename = scheme_url | remove: '/org/' %}
 
 <div class="post">
 
   <header class="post-header">
     <h1>{{ page.title }}</h1>
     <hr />
-    Download the code for this chapter: <a class="post-link" href="{{ scheme_url }}">{{ scheme_filename }}</a>
+    Download the code samples shown below: <a class="post-link" href="{{ scheme_url }}">{{ scheme_filename }}</a>
     <hr />
   </header>
 
