Add spacing between paragraphs

--- a/assets/css/org.css
+++ b/assets/css/org.css
@@ -3,6 +3,10 @@ hr {
     margin-bottom: 1em;
 }
 
+p {
+    margin-bottom: 1em;
+}
+
 .org-src-container {
     padding-top: 1em;
     padding-bottom: 1em;
