Publish code block exports and tangled files
Publish files exported from source code blocks as well as tangled source
files alongside the published html.

By storing the exported files in the org/ folder alongside the _org/
collection folder, relative links to the files will continue to work
when the jekyll site is built.

This way, stuff like graphviz images and things can be built and
exported correctly from source code blocks.

--- a/assets/_layouts/org.html
+++ b/assets/_layouts/org.html
@@ -2,15 +2,15 @@
 layout: default
 ---
 
-{% assign scheme_filename = page.url | replace: '.html','.src.txt' | remove: '/org/' %}
-{% assign scheme_url = scheme_filename | prepend: '/src/' %}
+{% assign org_url = page.url | replace: '.html','.org' %}
+{% assign org_filename = org_url | split: '/' | last %}
 
 <div class="post">
 
   <header class="post-header">
     <h1>{{ page.title }}</h1>
     <hr />
-    Download the code samples shown below: <a class="post-link" href="{{ scheme_url }}">{{ scheme_filename }}</a>
+    Download the Org-Mode source for this page: <a class="post-link" href="{{ org_url }}">{{ org_filename }}</a>
     <hr />
   </header>
 
