--- a/assets/css/org.css
+++ b/assets/css/org.css
@@ -1,3 +1,10 @@
+.post-header .download {
+    display: block;
+    margin-top: 1em;
+    border-top: 1px solid #e8e8e8;
+    font-size: 75%;
+}
+
 hr {
     margin-top: 1em;
     margin-bottom: 1em;
